unpackaged/objects/LoanApplication__c.object
<CustomObject>
    <description>To store loan application</description>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan Applications</relationshipLabel>
        <relationshipName>LoanApplications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>FundReleasedDate__c</fullName>
        <label>Fund Released Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LoanAmount__c</fullName>
        <description>To store the requestedloanamount</description>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>InReview</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Fund released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <description>To store tenure</description>
        <label>Tenure</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Loan Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Loan-{0000}</displayFormat>
        <label>Loan application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Applications</pluralLabel>
    <recordTypes>
        <fullName>HomeLoans</fullName>
        <active>true</active>
        <label>Home Loans</label>
    </recordTypes>
    <recordTypes>
        <fullName>PersonalLoans</fullName>
        <active>true</active>
        <label>Personal Loans</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>